<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/weightET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#FF46AEC2"
        android:ems="10"
        android:hint="@string/enter_weight_hint"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textColorHighlight="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/titleSeparator"
        app:layout_constraintTop_toBottomOf="@+id/wightTV" />

    <TextView
        android:id="@+id/heightTV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_tv"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/wightTV"
        app:layout_constraintTop_toBottomOf="@+id/titleSeparator"
        app:layout_constraintVertical_bias="0.22000003" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/title_tv"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/wightTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_tv"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/titleSeparator"
        app:layout_constraintVertical_bias="0.060000002" />

    <TableRow
        android:id="@+id/titleSeparator"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/feetET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#FF46AEC2"
        android:ems="10"
        android:hint="@string/enter_feet_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHighlight="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/weightET"
        app:layout_constraintTop_toBottomOf="@+id/heightTV2" />

    <EditText
        android:id="@+id/inchesET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#FF46AEC2"
        android:ems="10"
        android:hint="@string/inches_et_hint"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textColorHighlight="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/feetET"
        app:layout_constraintTop_toBottomOf="@+id/feetET" />

    <TextView
        android:id="@+id/feetTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:shadowColor="#000000"
        android:text="@string/feet_tv"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/feetET"
        app:layout_constraintStart_toEndOf="@+id/feetET"
        app:layout_constraintTop_toTopOf="@+id/feetET" />

    <TextView
        android:id="@+id/enchesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:shadowColor="#000000"
        android:text="@string/inches_tv"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/inchesET"
        app:layout_constraintStart_toEndOf="@+id/inchesET"
        app:layout_constraintTop_toTopOf="@+id/inchesET" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calculateBMI"
        android:text="@string/calculate_bmi_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSeparator"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/bmiResultTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSeparator"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/resultMsgTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmiResultTV" />

    <TextView
        android:id="@+id/lbTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/lb_tv"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/weightET"
        app:layout_constraintStart_toEndOf="@+id/weightET"
        app:layout_constraintTop_toTopOf="@+id/weightET" />
</androidx.constraintlayout.widget.ConstraintLayout>